# vrc-calendar-updater

./: .gitignore  COPYING.md  Cargo.toml  Dockerfile.build  Dockerfile.deploy  README.md  build.ps1  dryrun.ps1  generate.sh  upload.sh
.github/workflows/: main.yml  release-2.yml
docs/: format.md
src/: calendar.rs  config.rs  datastream.rs  event_info.rs  main.rs  render_prims.rs
