[package]
name = "calendar-updater"
version = "0.1.0"
authors = ["Bryan Donlan <bdonlan@gmail.com>"]
edition = "2018"
default-run = "calendar-updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.8", features = ["png"] }
png = "0.16"
anyhow = "1"
thiserror = "1"
pangocairo = "0.9"
pango = "0.8"

ical = "0.6.*"
reqwest = { version = "0.10", features = [ "blocking" ] }
chrono = "0.4"
itertools = "0.9"
hexdump = "0.1"

servo-fontconfig = "0.5"

tracing = "0.1"
tracing-log = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"

clap = "3.0.0-beta.1"
